# ngraph

contrib/gfx/: CMakeLists.txt
contrib/gfx/design_doc/: cpu_backend.txt  graph.txt  oplist.txt
contrib/gfx/test/: CMakeLists.txt
contrib/xgraph/: CMakeLists.txt
design_doc/: graph.txt
